// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidebarListItem /> at large size matches its snapshot 1`] = `
<LayoutListItem>
  <div
    className=
        y-sidebarList--item
        {
          position: relative;
        }
        &:hover {
          background-color: #f3f5f8;
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <CustomizedNavigationLink
      block={true}
      href="https://www.yammer.dev"
      unstyled={true}
    >
      <div
        className=

            {
              padding-bottom: 4px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 0;
            }
      >
        <MediaObject
          imageContent={
            <AccDB
              block={true}
              size={32}
            />
          }
          metadataContent="DESCRIPTION"
          size="small"
          titleContent="TITLE"
        />
      </div>
    </CustomizedNavigationLink>
  </div>
</LayoutListItem>
`;

exports[`<SidebarListItem /> at medium size matches its snapshot 1`] = `
<LayoutListItem>
  <div
    className=
        y-sidebarList--item
        {
          position: relative;
        }
        &:hover {
          background-color: #f3f5f8;
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <CustomizedNavigationLink
      block={true}
      href="https://www.yammer.dev"
      unstyled={true}
    >
      <div
        className=

            {
              padding-bottom: 4px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 4px;
            }
      >
        <MediaObject
          imageContent={
            <AccDB
              block={true}
              size={24}
            />
          }
          metadataContent="DESCRIPTION"
          size="xSmall"
          titleContent="TITLE"
        />
      </div>
    </CustomizedNavigationLink>
  </div>
</LayoutListItem>
`;

exports[`<SidebarListItem /> with clickable and illustration matches its snapshot 1`] = `
<LayoutListItem>
  <div
    className=
        y-sidebarList--item
        {
          position: relative;
        }
        &:hover {
          background-color: #f3f5f8;
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <CustomizedClickable
      block={true}
      onClick={[Function]}
      unstyled={true}
    >
      <div
        className=

            {
              padding-bottom: 2px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 2px;
            }
      >
        <MediaObject
          imageContent={
            <AccDB
              block={true}
              size={24}
            />
          }
          metadataContent="DESCRIPTION"
          size="xSmall"
          titleContent="TITLE"
        />
      </div>
    </CustomizedClickable>
  </div>
</LayoutListItem>
`;

exports[`<SidebarListItem /> with clickable and image matches its snapshot 1`] = `
<LayoutListItem>
  <div
    className=
        y-sidebarList--item
        {
          position: relative;
        }
        &:hover {
          background-color: #f3f5f8;
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <CustomizedClickable
      block={true}
      onClick={[Function]}
      unstyled={true}
    >
      <div
        className=

            {
              padding-bottom: 2px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 2px;
            }
      >
        <MediaObject
          imageContent={
            <img
              alt="image"
            />
          }
          metadataContent="DESCRIPTION"
          size="xSmall"
          titleContent="TITLE"
        />
      </div>
    </CustomizedClickable>
  </div>
</LayoutListItem>
`;

exports[`<SidebarListItem /> with link and illustration and newWindow matches its snapshot 1`] = `
<LayoutListItem>
  <div
    className=
        y-sidebarList--item
        {
          position: relative;
        }
        &:hover {
          background-color: #f3f5f8;
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <CustomizedNavigationLink
      block={true}
      href="https://www.yammer.dev"
      newWindow={true}
      unstyled={true}
    >
      <div
        className=

            {
              padding-bottom: 2px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 2px;
            }
      >
        <MediaObject
          imageContent={
            <AccDB
              block={true}
              size={24}
            />
          }
          metadataContent="DESCRIPTION"
          size="xSmall"
          titleContent="TITLE"
        />
      </div>
    </CustomizedNavigationLink>
  </div>
</LayoutListItem>
`;

exports[`<SidebarListItem /> with link and illustration matches its snapshot 1`] = `
<LayoutListItem>
  <div
    className=
        y-sidebarList--item
        {
          position: relative;
        }
        &:hover {
          background-color: #f3f5f8;
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <CustomizedNavigationLink
      block={true}
      href="https://www.yammer.dev"
      unstyled={true}
    >
      <div
        className=

            {
              padding-bottom: 2px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 2px;
            }
      >
        <MediaObject
          imageContent={
            <AccDB
              block={true}
              size={24}
            />
          }
          metadataContent="DESCRIPTION"
          size="xSmall"
          titleContent="TITLE"
        />
      </div>
    </CustomizedNavigationLink>
  </div>
</LayoutListItem>
`;

exports[`<SidebarListItem /> with link and image matches its snapshot 1`] = `
<LayoutListItem>
  <div
    className=
        y-sidebarList--item
        {
          position: relative;
        }
        &:hover {
          background-color: #f3f5f8;
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <CustomizedNavigationLink
      block={true}
      href="https://www.yammer.dev"
      unstyled={true}
    >
      <div
        className=

            {
              padding-bottom: 2px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 2px;
            }
      >
        <MediaObject
          imageContent={
            <img
              alt="image"
            />
          }
          metadataContent="DESCRIPTION"
          size="xSmall"
          titleContent="TITLE"
        />
      </div>
    </CustomizedNavigationLink>
  </div>
</LayoutListItem>
`;
